# Model_predictive_control

./: Readme.md  pyproject.toml
CasADI_ONNX/: CasADI-ONNX_part1.ipynb  CasADI-ONNX_part2.ipynb  CasADI-ONNX_part3.ipynb  input_feature_scaler.pkl  onnx_import.md  output_target_scaler.pkl
CasADI_ONNX/OnnxExport/: vdp_ann_model.onnx
Interactive_MPC/: 00.ipynb  01.1_Discrete-time_linear_systems.ipynb  01.2_LMPC_objective_function.ipynb  01.3_Solving_QPs.ipynb  01.4_LMPC.ipynb  02.1_System_identification.ipynb  02.2_Kalman_filter.ipynb  05.1_Fed-batch_bioreactor.ipynb  05.2_Bioreactor_setpoint_tracking.ipynb  05.3_Bioreactor_maximizing_product.ipynb  05.4_Bioreactor_state_estimation.ipynb  05.5_Perfusion_bioreactor_modeling.ipynb  05.6_Integrated_bioreactor_optimization.ipynb  06.1_Data_driven_models.ipynb  06.2_ANN-MPC.ipynb  06.3_PINN-MPC.ipynb  06.4_GP-MPC.ipynb  06.4_GP_MPC.ipynb  Outline.md
Mastering_Model_Predictive_Control/: 00_Mastering_model_predictive_control.md  01_Introduction.md  02_Foundations.md  03_Process_modeling.md  04_Nonlinear_modeling.md  05_State_estimation.md  06_Optimization_algorithms.md  07A_Systematic_MPC_tuning.md  07B_Disturbance_modeling.md  07_Stability.md  08_Nonlinear_MPC.md  09_Hybrid_systems.md  10_Fed-batch_bioreactor.md  11_Continuous_biomanufacturing.md  12_Practical_implementation.md  Appendix_A_ANN-MPC.md  Appendix_B_PINNs.md  Appendix_C_Linear_algebra.md  Appendix_D_MPC_Software.md  Appendix_E_Gussian_Process_models.md  Appendix_F_Kalman_filter.md
onnx_casadi_converter/: plan.md  pyproject,toml  run_ann_conversion_tests.py
(+10 files in other folders)
